Fixed overlapping top nav

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
+  padding-top: 70px;
   background: url('cream_pixels.png');
   /*font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 */
